plugins {
    id 'java'
    alias(libs.plugins.spring.boot)
    alias(libs.plugins.spring.dependency.management)
}

group = "com.hanumoka.sado"
version = "0.0.1-SNAPSHOT"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

// Java 컴파일러에 -parameters 플래그 추가
// → Spring이 @PathVariable, @RequestParam 등의 파라미터 이름을 런타임에 인식 가능
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['-parameters']
}

dependencies {
    // sado-common 의존성 (BaseEntity, TenantAwareEntity 사용)
    implementation project(':sado-common')

    // Spring Boot & JPA
    implementation libs.spring.boot.starter.web
    implementation libs.spring.boot.starter.data.jpa

    // Database
    runtimeOnly libs.mysql.connector.java

    // AWS SDK S3 (SeaweedFS 연동)
    implementation libs.aws.s3

    // UUID v7
    implementation 'com.github.f4b6a3:uuid-creator:5.3.7'

    // DCM4CHE DICOM 라이브러리 (5.29.1 - mini-pacs-poc 검증 버전)
    implementation 'org.dcm4che:dcm4che-core:5.29.1'

    // Lombok
    implementation libs.lombok
    annotationProcessor libs.lombok

    // Test
    testImplementation libs.spring.boot.starter.test
    testImplementation 'org.mockito:mockito-core:5.8.0'  // Mockito for @MockBean
    testRuntimeOnly libs.h2.database  // H2 in-memory database for testing
    testRuntimeOnly libs.junit.platform.launcher  // JUnit Platform launcher
}

tasks.named('test') {
    useJUnitPlatform()
    systemProperty 'file.encoding', 'UTF-8'
}
